# graphics_project_summer

./: CMakeLists.txt  README.md  attributes.cpp  attributes.h  canvas.cpp  canvas.h  circle.cpp  circle.h  final_product.cpp  key_util.cpp  key_util.h  line.cpp  line.h  mock.cpp  mock.h  point.cpp  polygon.cpp  polygon.h  rectangle.cpp  rectangle.h  shape.cpp  shape.h  svg.cpp  svg.h  test_shapes.cpp  text.cpp  text.h  triangle.cpp  triangle.h  utils.cpp  utils.h
canvas_lib/: canvas.cpp  canvas.h  svg.cpp  svg.h
shape_lib/: circle.cpp  circle.h  line.cpp  line.h  mock.h  polygon.cpp  polygon.h  rectangle.cpp  rectangle.h  shape.cpp  shape.h  text.h  triangle.cpp  triangle.h
shared_utils/: attributes.cpp  attributes.h  point.cpp  point.h  utils.cpp  utils.h
